[TESTBUG] WB_IsCDSIncludedInVmBuild should support uncompressed oops/klasses

XMLWordPrintable

    • b15

      http://hg.openjdk.java.net/jdk/jdk/file/73bcb3e4e596/src/hotspot/share/prims/whitebox.cpp#l1975

      WB_ENTRY(jboolean, WB_IsCDSIncludedInVmBuild(JNIEnv* env))
      #if INCLUDE_CDS
      # ifdef _LP64
          if (!UseCompressedOops || !UseCompressedClassPointers) {
            // On 64-bit VMs, CDS is supported only with compressed oops/pointers
            return false;
          }
      # endif // _LP64
        return true;
      #else
        return false;
      #endif // INCLUDE_CDS
      WB_END

      The test for (!UseCompressedOops || !UseCompressedClassPointers) should be removed because CDS started supporting them after JDK-8232069.

      To validate, run all CDS tests with

      jtreg -vmoptions:-XX:+UseZGC
      jtreg -vmoptions:-XX:-UseCompressedOops
      jtreg -vmoptions:-XX:-UseCompressedClassPointers

            Assignee:
            Yumin Qi
            Reporter:
            Ioi Lam
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: