8240563: [TESTBUG] WB_IsCDSIncludedInVmBuild should support uncompressed oops/klasses

With 8232069, CDS works with uncompressed oops/kalsses, detecting CDS code no longer bases on the two flags.

Reviewed-by: iklam